--- a/partials/sidebar.mustache
+++ b/partials/sidebar.mustache
@@ -8,12 +8,16 @@
             </div>
 
             <div class="panel-body">
+                <a target="_blank" href="{{settings.url}}/rss.xml" class="btn btn-social-icon btn-outline"><i class="fa fa-rss"></i></a>
                 {{#twitter}}
                     <a target="_blank" href="{{.}}" class="btn btn-social-icon btn-twitter"><i class="fa fa-twitter"></i></a>
                 {{/twitter}}
                 {{#linkedin}}
                     <a target="_blank" href="{{.}}" class="btn btn-social-icon btn-linkedin"><i class="fa fa-linkedin"></i></a>
                 {{/linkedin}}
+                {{#github}}
+                    <a target="_blank" href="{{.}}" class="btn btn-social-icon btn-github"><i class="fa fa-github"></i></a>
+                {{/github}}
                 {{#google}}
                     <a target="_blank" href="{{.}}" class="btn btn-social-icon btn-google-plus"><i class="fa fa-google-plus"></i></a>
                 {{/google}}
