--- a/partials/head.mustache
+++ b/partials/head.mustache
@@ -9,6 +9,9 @@
 
     <title>{{settings.title}}</title>
 
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
+    <link rel="shortcut icon" type="image/x-icon" href="{{settings.url}}/favicon.ico"/>
+
     <!-- Bootstrap CSS file -->
     <link href="{{settings.url}}/js/plugins/bootstrap-3.0.3/css/{{settings.theme}}" rel="stylesheet"/>
     <link href="{{settings.url}}/js/plugins/font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet">
