--- a/partials/head.mustache
+++ b/partials/head.mustache
@@ -9,8 +9,8 @@
 
     <title>{{settings.title}}</title>
 
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
-    <link rel="shortcut icon" type="image/x-icon" href="{{settings.url}}/favicon.ico"/>
+    <link rel="shortcut icon" href="/favicon.ico"/>
+    <link rel="shortcut icon" href="{{settings.url}}/favicon.ico"/>
 
     <!-- Bootstrap CSS file -->
     <link href="{{settings.url}}/js/plugins/bootstrap-3.0.3/css/{{settings.theme}}" rel="stylesheet"/>
