--- a/partials/footer.mustache
+++ b/partials/footer.mustache
@@ -10,6 +10,7 @@
 <script src="{{settings.url}}/js/jquery-2.0.3.min.js"></script>
 <script src="{{settings.url}}/js/plugins/bootstrap-3.0.3/js/bootstrap.min.js"></script>
 <script src="{{settings.url}}/js/blog.js"></script>
+<script src="{{settings.url}}/js/search.js"></script>
 
 </body>
 </html>
