--- a/partials/nav.mustache
+++ b/partials/nav.mustache
@@ -15,12 +15,14 @@
         </div>
 
         <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
-            <form name="searchForm" class="navbar-form navbar-right" role="search" action="http://google.com/search">
+            <form class="navbar-form navbar-right" role="search">
                 <div class="form-group">
-                    <input type="text" name="q" class="form-control" placeholder="Search">
-                    <input name="q" type="hidden" value="site:{{settings.url}}"/>
+                    <input type="text" name="q" class="searchQuery form-control" placeholder="Search Posts">
                 </div>
-                <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i> Submit</button>
+
+                <button type="button" class="searchButton btn btn-default"><i class="glyphicon glyphicon-search"></i>
+                    Submit
+                </button>
             </form>
 
             {{#pages}}
