--- a/partials/nav.mustache
+++ b/partials/nav.mustache
@@ -15,15 +15,15 @@
         </div>
 
         <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
-            <form class="navbar-form navbar-right" role="search">
+            <div class="navbar-form navbar-right" role="search">
                 <div class="form-group">
-                    <input type="text" name="q" class="searchQuery form-control" placeholder="Search Posts">
+                    <input type="text" class="searchQuery form-control" placeholder="Search Posts">
                 </div>
 
                 <button type="button" class="searchButton btn btn-default"><i class="glyphicon glyphicon-search"></i>
                     Submit
                 </button>
-            </form>
+            </div>
 
             {{#pages}}
                 <ul class="nav navbar-nav page-links">
