--- a/partials/nav.mustache
+++ b/partials/nav.mustache
@@ -11,7 +11,7 @@
                 <span class="icon-bar"></span>
             </button>
 
-            <a href="{{settings.url}}/index.html" class="navbar-brand">{{settings.title}}</a>
+            <a href="{{settings.url}}/index.html" class="navbar-brand"><i class="fa fa-code"></i> {{settings.title}}</a>
         </div>
 
         <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
