--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 body {
     margin-top: 75px;
-    font-family: "Open Sans", Tahoma, Verdana, Segoe, sans-serif;
+    font-family: "Open Sans", Verdana, Tahoma, Segoe, sans-serif;
     font-size: 15px;
-    line-height: 24px;
+    line-height: 22px;
 }
 
 .post-content, .page-content {
     font-size: 15px;
-    line-height: 24px;
+    line-height: 22px;
 }
 
 .main-content {
