--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 .post-content, .page-content, .main-content {
     margin-bottom: 20px;
     font-size: 16px;
-    line-height: 24px;
+    line-height: 1.6;
 }
 
 .fa-rss {
