--- a/js/plugins/highlight/styles/github.css
+++ b/js/plugins/highlight/styles/github.css
@@ -1,125 +1,138 @@
-/*
-
-github.com style (c) Vasily Polovnyov <vast@whiteants.net>
-
-*/
+/*!
+ * Agate by Taufik Nurrohman <https://github.com/tovic>
+ * ----------------------------------------------------
+ *
+ * #ade5fc
+ * #a2fca2
+ * #c6b4f0
+ * #d36363
+ * #fcc28c
+ * #fc9b9b
+ * #ffa
+ * #fff
+ * #333
+ * #62c8f3
+ * #888
+ *
+ */
 
 .hljs {
-  display: block;
-  overflow-x: auto;
-  padding: 0.5em;
-  color: #333;
-  background: #f8f8f8;
-  -webkit-text-size-adjust: none;
+    display: block;
+    overflow-x: auto;
+    padding: .5em;
+    background: #333;
+    color: white;
+    -webkit-text-size-adjust: none;
 }
 
-.hljs-comment,
-.diff .hljs-header,
-.hljs-javadoc {
-  color: #998;
-  font-style: italic;
+.asciidoc .hljs-title,
+.hljs-label,
+.hljs-tag .hljs-title,
+.hljs-prompt,
+.http .hljs-request {
+    font-weight: bold;
 }
 
-.hljs-keyword,
-.css .rule .hljs-keyword,
-.hljs-winutils,
-.nginx .hljs-title,
-.hljs-subst,
-.hljs-request,
-.hljs-status {
-  color: #333;
-  font-weight: bold;
+.hljs-change,
+.hljs-code {
+    font-style: italic;
+}
+
+.hljs-tag,
+.ini .hljs-title {
+    color: #62c8f3;
+}
+
+.hljs-id,
+.hljs-cbracket,
+.hljs-tag .hljs-value {
+    color: #ade5fc;
+}
+
+.hljs-string,
+.hljs-bullet {
+    color: #a2fca2;
+}
+
+.hljs-type,
+.hljs-variable,
+.hljs-name,
+.actionscript .hljs-title,
+.aspectj .hljs-annotation,
+.aspectj .hljs-title,
+.hljs-attribute,
+.hljs-change,
+.hljs-blockquote,
+.hljs-built_in {
+    color: #ffa;
 }
 
 .hljs-number,
 .hljs-hexcolor,
-.ruby .hljs-constant {
-  color: #008080;
+.hljs-link_label,
+.hljs-link_reference {
+    color: #d36363;
 }
 
-.hljs-string,
-.hljs-tag .hljs-value,
-.hljs-phpdoc,
-.hljs-dartdoc,
-.tex .hljs-formula {
-  color: #d14;
+.hljs-keyword,
+.hljs-literal,
+.hljs-constant,
+.css .hljs-tag,
+.hljs-typename,
+.hljs-winutils {
+    color: #fcc28c;
 }
 
-.hljs-title,
-.hljs-id,
-.scss .hljs-preprocessor {
-  color: #900;
-  font-weight: bold;
-}
-
-.hljs-list .hljs-keyword,
-.hljs-subst {
-  font-weight: normal;
-}
-
-.hljs-class .hljs-title,
-.hljs-type,
-.vhdl .hljs-literal,
-.tex .hljs-command {
-  color: #458;
-  font-weight: bold;
-}
-
-.hljs-tag,
-.hljs-tag .hljs-title,
-.hljs-rule .hljs-property,
-.django .hljs-tag .hljs-keyword {
-  color: #000080;
-  font-weight: normal;
-}
-
-.hljs-attribute,
-.hljs-variable,
-.lisp .hljs-body,
-.hljs-name {
-  color: #008080;
-}
-
-.hljs-regexp {
-  color: #009926;
-}
-
-.hljs-symbol,
-.ruby .hljs-symbol .hljs-string,
-.lisp .hljs-keyword,
-.clojure .hljs-keyword,
-.scheme .hljs-keyword,
-.tex .hljs-special,
-.hljs-prompt {
-  color: #990073;
-}
-
-.hljs-built_in {
-  color: #0086b3;
-}
-
+.hljs-comment,
+.hljs-cdata,
 .hljs-preprocessor,
-.hljs-pragma,
-.hljs-pi,
+.hljs-annotation,
+.hljs-decorator,
 .hljs-doctype,
+.hljs-deletion,
 .hljs-shebang,
-.hljs-cdata {
-  color: #999;
-  font-weight: bold;
+.apache .hljs-sqbracket,
+.tex .hljs-formula,
+.hljs-header,
+.hljs-horizontal_rule,
+.hljs-code,
+.hljs-javadoc {
+    color: #888;
+}
+
+.hljs-regexp,
+.hljs-attr_selector {
+    color: #c6b4f0;
+}
+
+.hljs-important,
+.hljs-doctype,
+.hljs-pi,
+.hljs-chunk,
+.actionscript .hljs-type,
+.hljs-shebang,
+.hljs-pragma,
+.http .hljs-attribute {
+    color: #fc9b9b;
 }
 
 .hljs-deletion {
-  background: #fdd;
+    background-color: #fc9b9b;
+    color: #333;
 }
 
 .hljs-addition {
-  background: #dfd;
+    background-color: #a2fca2;
+    color: #333;
 }
 
-.diff .hljs-change {
-  background: #0086b3;
+.hljs a,
+.hljs-tag .hljs-attribute {
+    color: inherit;
 }
 
-.hljs-chunk {
-  color: #aaa;
+.hljs a:focus,
+.hljs a:hover {
+    color: inherit;
+    text-decoration: underline;
 }
