--- a/js/plugins/highlight/styles/github.css
+++ b/js/plugins/highlight/styles/github.css
@@ -1,143 +1,89 @@
 /*
-
-Darkula color scheme from the JetBrains family of IDEs
-
+    Name:     Kimbie (light)
+    Author:   Jan T. Sott
+    License:  Creative Commons Attribution-ShareAlike 4.0 Unported License
+    URL:      https://github.com/idleberg/Kimbie-highlight.js
 */
 
+/* Kimbie Comment */
+.hljs-comment,
+.hljs-title {
+    color: #a57a4c;
+}
+
+/* Kimbie Red */
+.hljs-variable,
+.hljs-attribute,
+.hljs-tag,
+.hljs-regexp,
+.hljs-name,
+.ruby .hljs-constant,
+.xml .hljs-tag .hljs-title,
+.xml .hljs-pi,
+.xml .hljs-doctype,
+.html .hljs-doctype,
+.css .hljs-id,
+.css .hljs-class,
+.css .hljs-pseudo {
+    color: #dc3958;
+}
+
+/* Kimbie Orange */
+.hljs-number,
+.hljs-preprocessor,
+.hljs-built_in,
+.hljs-literal,
+.hljs-params,
+.hljs-constant {
+    color: #f79a32;
+}
+
+/* Kimbie Yellow */
+.ruby .hljs-class .hljs-title,
+.css .hljs-rule .hljs-attribute {
+    color: #f06431;
+}
+
+/* Kimbie Green */
+.hljs-string,
+.hljs-value,
+.hljs-inheritance,
+.hljs-header,
+.ruby .hljs-symbol,
+.xml .hljs-cdata {
+    color: #889b4a;
+}
+
+/* Kimbie Aqua */
+.css .hljs-hexcolor {
+    color: #088649;
+}
+
+/* Kimbie Blue */
+.hljs-function,
+.python .hljs-decorator,
+.python .hljs-title,
+.ruby .hljs-function .hljs-title,
+.ruby .hljs-title .hljs-keyword,
+.perl .hljs-sub,
+.javascript .hljs-title,
+.coffeescript .hljs-title {
+    color: #8ab1b0;
+}
+
+/* Kimbie Purple */
+.hljs-keyword,
+.javascript .hljs-function {
+    color: #98676a;
+}
 
 .hljs {
     display: block;
     overflow-x: auto;
+    background: #fbebd4;
+    color: #84613d;
     padding: 0.5em;
-    background: #2b2b2b;
     -webkit-text-size-adjust: none;
-}
-
-.hljs,
-.hljs-tag,
-.hljs-title,
-.css .hljs-rule,
-.css .hljs-value,
-.aspectj .hljs-function,
-.css .hljs-function .hljs-preprocessor,
-.hljs-pragma {
-    color: #bababa;
-}
-
-.hljs-strongemphasis,
-.hljs-strong,
-.hljs-emphasis {
-    color: #a8a8a2;
-}
-
-.hljs-bullet,
-.hljs-blockquote,
-.hljs-horizontal_rule,
-.hljs-number,
-.hljs-regexp,
-.alias .hljs-keyword,
-.hljs-literal,
-.hljs-hexcolor {
-    color: #6896ba;
-}
-
-.hljs-tag .hljs-value,
-.hljs-code,
-.css .hljs-class,
-.hljs-class .hljs-title:last-child {
-    color: #a6e22e;
-}
-
-.hljs-link_url {
-    font-size: 80%;
-}
-
-.hljs-emphasis,
-.hljs-strongemphasis,
-.hljs-class .hljs-title:last-child,
-.hljs-typename {
-    font-style: italic;
-}
-
-.hljs-keyword,
-.ruby .hljs-class .hljs-keyword:first-child,
-.ruby .hljs-function .hljs-keyword,
-.hljs-function,
-.hljs-change,
-.hljs-winutils,
-.hljs-flow,
-.nginx .hljs-title,
-.tex .hljs-special,
-.hljs-header,
-.hljs-attribute,
-.hljs-symbol,
-.hljs-symbol .hljs-string,
-.hljs-tag .hljs-title,
-.hljs-value,
-.alias .hljs-keyword:first-child,
-.css .hljs-tag,
-.css .unit,
-.css .hljs-important {
-    color: #cb7832;
-}
-
-.hljs-function .hljs-keyword,
-.hljs-class .hljs-keyword:first-child,
-.hljs-aspect .hljs-keyword:first-child,
-.hljs-constant,
-.hljs-typename,
-.css .hljs-attribute {
-    color: #cb7832;
-}
-
-.hljs-variable,
-.hljs-params,
-.hljs-class .hljs-title,
-.hljs-aspect .hljs-title {
-    color: #b9b9b9;
-}
-
-.hljs-string,
-.css .hljs-id,
-.hljs-subst,
-.hljs-type,
-.ruby .hljs-class .hljs-parent,
-.hljs-built_in,
-.django .hljs-template_tag,
-.django .hljs-variable,
-.smalltalk .hljs-class,
-.django .hljs-filter .hljs-argument,
-.smalltalk .hljs-localvars,
-.smalltalk .hljs-array,
-.hljs-attr_selector,
-.hljs-pseudo,
-.hljs-addition,
-.hljs-stream,
-.hljs-envvar,
-.apache .hljs-tag,
-.apache .hljs-cbracket,
-.tex .hljs-command,
-.hljs-prompt,
-.hljs-link_label,
-.hljs-link_url,
-.hljs-name {
-    color: #e0c46c;
-}
-
-.hljs-comment,
-.hljs-javadoc,
-.hljs-annotation,
-.hljs-pi,
-.hljs-doctype,
-.hljs-deletion,
-.hljs-shebang,
-.apache .hljs-sqbracket,
-.tex .hljs-formula {
-    color: #7f7f7f;
-}
-
-.hljs-decorator {
-    color: #bab429;
 }
 
 .coffeescript .javascript,
@@ -146,8 +92,6 @@ Darkula color scheme from the JetBrains family of IDEs
 .xml .javascript,
 .xml .vbscript,
 .xml .css,
-.xml .hljs-cdata,
-.xml .php,
-.php .xml {
+.xml .hljs-cdata {
     opacity: 0.5;
 }
