--- a/js/plugins/highlight/styles/github.css
+++ b/js/plugins/highlight/styles/github.css
@@ -1,108 +1,125 @@
 /*
 
-Pojoaque Style by Jason Tate
-http://web-cms-designs.com/ftopict-10-pojoaque-style-for-highlight-js-code-highlighter.html
-Based on Solarized Style from http://ethanschoonover.com/solarized
+github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 
 */
 
 .hljs {
-    display: block;
-    overflow-x: auto;
-    padding: 0.5em;
-    color: #dccf8f;
-    background: url(./pojoaque.jpg) repeat scroll left top #181914;
-    -webkit-text-size-adjust: none;
+  display: block;
+  overflow-x: auto;
+  padding: 0.5em;
+  color: #333;
+  background: #f8f8f8;
+  -webkit-text-size-adjust: none;
 }
 
 .hljs-comment,
 .diff .hljs-header,
-.hljs-doctype,
-.lisp .hljs-string,
 .hljs-javadoc {
-    color: #586e75;
-    font-style: italic;
+  color: #998;
+  font-style: italic;
 }
 
 .hljs-keyword,
 .css .rule .hljs-keyword,
 .hljs-winutils,
-.javascript .hljs-title,
-.method,
-.hljs-addition,
-.css .hljs-tag,
-.hljs-list .hljs-keyword,
-.nginx .hljs-title {
-    color: #b64926;
+.nginx .hljs-title,
+.hljs-subst,
+.hljs-request,
+.hljs-status {
+  color: #333;
+  font-weight: bold;
 }
 
 .hljs-number,
-.hljs-command,
+.hljs-hexcolor,
+.ruby .hljs-constant {
+  color: #008080;
+}
+
 .hljs-string,
 .hljs-tag .hljs-value,
 .hljs-phpdoc,
 .hljs-dartdoc,
-.tex .hljs-formula,
-.hljs-regexp,
-.hljs-hexcolor {
-    color: #468966;
+.tex .hljs-formula {
+  color: #d14;
 }
 
 .hljs-title,
-.hljs-localvars,
-.hljs-function .hljs-title,
-.hljs-chunk,
-.hljs-decorator,
-.hljs-built_in,
-.hljs-identifier,
-.hljs-name,
-.hljs-id {
-    color: #ffb03b;
+.hljs-id,
+.scss .hljs-preprocessor {
+  color: #900;
+  font-weight: bold;
+}
+
+.hljs-list .hljs-keyword,
+.hljs-subst {
+  font-weight: normal;
+}
+
+.hljs-class .hljs-title,
+.hljs-type,
+.vhdl .hljs-literal,
+.tex .hljs-command {
+  color: #458;
+  font-weight: bold;
+}
+
+.hljs-tag,
+.hljs-tag .hljs-title,
+.hljs-rule .hljs-property,
+.django .hljs-tag .hljs-keyword {
+  color: #000080;
+  font-weight: normal;
 }
 
 .hljs-attribute,
 .hljs-variable,
 .lisp .hljs-body,
-.smalltalk .hljs-number,
-.hljs-constant,
-.hljs-class .hljs-title,
-.hljs-parent,
-.hljs-type {
-    color: #b58900;
+.hljs-name {
+  color: #008080;
 }
 
-.css .hljs-attribute {
-    color: #b89859;
+.hljs-regexp {
+  color: #009926;
 }
 
-.css .hljs-number,
-.css .hljs-hexcolor {
-    color: #dccf8f;
+.hljs-symbol,
+.ruby .hljs-symbol .hljs-string,
+.lisp .hljs-keyword,
+.clojure .hljs-keyword,
+.scheme .hljs-keyword,
+.tex .hljs-special,
+.hljs-prompt {
+  color: #990073;
 }
 
-.css .hljs-class {
-    color: #d3a60c;
+.hljs-built_in {
+  color: #0086b3;
 }
 
 .hljs-preprocessor,
 .hljs-pragma,
 .hljs-pi,
+.hljs-doctype,
 .hljs-shebang,
-.hljs-symbol,
-.hljs-symbol .hljs-string,
-.diff .hljs-change,
-.hljs-special,
-.hljs-attr_selector,
-.hljs-important,
-.hljs-subst,
 .hljs-cdata {
-    color: #cb4b16;
+  color: #999;
+  font-weight: bold;
 }
 
 .hljs-deletion {
-    color: #dc322f;
+  background: #fdd;
 }
 
-.tex .hljs-formula {
-    background: #073642;
+.hljs-addition {
+  background: #dfd;
+}
+
+.diff .hljs-change {
+  background: #0086b3;
+}
+
+.hljs-chunk {
+  color: #aaa;
 }
