--- a/js/plugins/highlight/styles/obsidian.css
+++ b/js/plugins/highlight/styles/obsidian.css
@@ -161,6 +161,7 @@ pre {
     line-height: 1.42857143;
     word-break: break-all;
     word-wrap: break-word;
+    color: #999;
     background-color: #333;
     border: 1px solid #000;
     border-radius: 6px;
