--- a/js/plugins/highlight/styles/php.css
+++ b/js/plugins/highlight/styles/php.css
@@ -6,7 +6,7 @@ php.net style (c) Sarfraz Ahmed <sarfraznawaz2005@gmail.com>
   display: block;
   overflow-x: auto;
   padding: 0.5em;
-  color: #2F7700;
+  color: #0000BB;
   background: #f8f8f8;
   -webkit-text-size-adjust: none;
 }
