--- a/js/plugins/highlight/styles/php.css
+++ b/js/plugins/highlight/styles/php.css
@@ -93,7 +93,7 @@ php.net style (c) Sarfraz Ahmed <sarfraznawaz2005@gmail.com>
 }
 
 .hljs-built_in {
-  color: #0000BB;
+  color: #009926;
 }
 
 .hljs-preprocessor,
