--- a/js/plugins/highlight/styles/php.css
+++ b/js/plugins/highlight/styles/php.css
@@ -26,7 +26,6 @@ php.net style (c) Sarfraz Ahmed <sarfraznawaz2005@gmail.com>
 .hljs-request,
 .hljs-status {
   color: #2F7700;
-  font-weight: bold;
 }
 
 .hljs-number,
@@ -47,7 +46,6 @@ php.net style (c) Sarfraz Ahmed <sarfraznawaz2005@gmail.com>
 .hljs-id,
 .scss .hljs-preprocessor {
   color: #0000BB;
-  font-weight: bold;
 }
 
 .hljs-list .hljs-keyword,
@@ -60,7 +58,6 @@ php.net style (c) Sarfraz Ahmed <sarfraznawaz2005@gmail.com>
 .vhdl .hljs-literal,
 .tex .hljs-command {
   color: #0000BB;
-  font-weight: bold;
 }
 
 .hljs-tag,
@@ -102,8 +99,7 @@ php.net style (c) Sarfraz Ahmed <sarfraznawaz2005@gmail.com>
 .hljs-doctype,
 .hljs-shebang,
 .hljs-cdata {
-  color: #999;
-  font-weight: bold;
+  color: #0000BB;
 }
 
 .hljs-deletion {
@@ -119,5 +115,5 @@ php.net style (c) Sarfraz Ahmed <sarfraznawaz2005@gmail.com>
 }
 
 .hljs-chunk {
-  color: #aaa;
+  color: #0000BB;
 }
