--- a/js/plugins/highlight/styles/php.css
+++ b/js/plugins/highlight/styles/php.css
@@ -31,7 +31,7 @@ php.net style (c) Sarfraz Ahmed <sarfraznawaz2005@gmail.com>
 .hljs-number,
 .hljs-hexcolor,
 .ruby .hljs-constant {
-  color: #0000BB;
+  color: #009926;
 }
 
 .hljs-string,
