--- a/js/plugins/highlight/styles/php.css
+++ b/js/plugins/highlight/styles/php.css
@@ -6,7 +6,7 @@ php.net style (c) Sarfraz Ahmed <sarfraznawaz2005@gmail.com>
   display: block;
   overflow-x: auto;
   padding: 0.5em;
-  color: #0000BB;
+  color: #009926;
   background: #f8f8f8;
   -webkit-text-size-adjust: none;
 }
@@ -25,7 +25,7 @@ php.net style (c) Sarfraz Ahmed <sarfraznawaz2005@gmail.com>
 .hljs-subst,
 .hljs-request,
 .hljs-status {
-  color: #2F7700;
+  color: #009926;
 }
 
 .hljs-number,
