--- a/js/plugins/highlight/styles/php.css
+++ b/js/plugins/highlight/styles/php.css
@@ -2,20 +2,28 @@
 php.net style (c) Sarfraz Ahmed <sarfraznawaz2005@gmail.com>
 */
 
+@font-face {
+    font-family: 'PragmataPro';
+    src: url('../PragmataPro/PragmataPro.eot?#iefix') format('embedded-opentype'), url('../PragmataPro/PragmataPro.woff') format('woff'), url('../PragmataPro/PragmataPro.ttf') format('truetype'), url('../PragmataPro/PragmataPro.svg#PragmataPro') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 .hljs {
-  display: block;
-  overflow-x: auto;
-  padding: 0.5em;
-  color: #0000BB;
-  background: #f8f8f8;
-  -webkit-text-size-adjust: none;
+    display: block;
+    font-family: 'PragmataPro';
+    overflow-x: auto;
+    padding: 0.5em;
+    color: #0000BB;
+    background: #f8f8f8;
+    -webkit-text-size-adjust: none;
 }
 
 .hljs-comment,
 .diff .hljs-header,
 .hljs-javadoc {
-  color: #FF8000;
-  font-style: italic;
+    color: #FF8000;
+    font-style: italic;
 }
 
 .hljs-keyword,
@@ -25,13 +33,13 @@ php.net style (c) Sarfraz Ahmed <sarfraznawaz2005@gmail.com>
 .hljs-subst,
 .hljs-request,
 .hljs-status {
-  color: #009926;
+    color: #009926;
 }
 
 .hljs-number,
 .hljs-hexcolor,
 .ruby .hljs-constant {
-  color: #009926;
+    color: #009926;
 }
 
 .hljs-string,
@@ -39,44 +47,44 @@ php.net style (c) Sarfraz Ahmed <sarfraznawaz2005@gmail.com>
 .hljs-phpdoc,
 .hljs-dartdoc,
 .tex .hljs-formula {
-  color: #DD0000;
+    color: #DD0000;
 }
 
 .hljs-title,
 .hljs-id,
 .scss .hljs-preprocessor {
-  color: #0000BB;
+    color: #0000BB;
 }
 
 .hljs-list .hljs-keyword,
 .hljs-subst {
-  font-weight: normal;
+    font-weight: normal;
 }
 
 .hljs-class .hljs-title,
 .hljs-type,
 .vhdl .hljs-literal,
 .tex .hljs-command {
-  color: #0000BB;
+    color: #0000BB;
 }
 
 .hljs-tag,
 .hljs-tag .hljs-title,
 .hljs-rule .hljs-property,
 .django .hljs-tag .hljs-keyword {
-  color: #0000BB;
-  font-weight: normal;
+    color: #0000BB;
+    font-weight: normal;
 }
 
 .hljs-attribute,
 .hljs-variable,
 .lisp .hljs-body,
 .hljs-name {
-  color: #333;
+    color: #333;
 }
 
 .hljs-regexp {
-  color: #009926;
+    color: #009926;
 }
 
 .hljs-symbol,
@@ -86,11 +94,11 @@ php.net style (c) Sarfraz Ahmed <sarfraznawaz2005@gmail.com>
 .scheme .hljs-keyword,
 .tex .hljs-special,
 .hljs-prompt {
-  color: #990073;
+    color: #990073;
 }
 
 .hljs-built_in {
-  color: #0000BB;
+    color: #0000BB;
 }
 
 .hljs-preprocessor,
@@ -99,21 +107,21 @@ php.net style (c) Sarfraz Ahmed <sarfraznawaz2005@gmail.com>
 .hljs-doctype,
 .hljs-shebang,
 .hljs-cdata {
-  color: #0000BB;
+    color: #0000BB;
 }
 
 .hljs-deletion {
-  background: #fdd;
+    background: #fdd;
 }
 
 .hljs-addition {
-  background: #dfd;
+    background: #dfd;
 }
 
 .diff .hljs-change {
-  background: #0086b3;
+    background: #0086b3;
 }
 
 .hljs-chunk {
-  color: #0000BB;
+    color: #0000BB;
 }
