--- a/js/plugins/highlight/styles/php.css
+++ b/js/plugins/highlight/styles/php.css
@@ -12,7 +12,7 @@ php.net style (c) Sarfraz Ahmed <sarfraznawaz2005@gmail.com>
 .hljs {
     display: block;
     font-family: 'PragmataPro';
-    font-weight: 600;
+    font-size: 14px;
     overflow-x: auto;
     padding: 0.5em;
     color: #0000BB;
