--- a/js/plugins/highlight/styles/php.css
+++ b/js/plugins/highlight/styles/php.css
@@ -13,6 +13,7 @@ pre {
     box-shadow: 0 0 10px 0 rgba(197, 197, 197, 0.75);
     -moz-box-shadow: 0 0 10px 0 rgba(197, 197, 197, 0.75);
     -webkit-box-shadow: 0 0 10px 0 rgba(197, 197, 197, 0.75);
+    padding: 0;
 }
 
 .hljs {
