--- a/js/plugins/highlight/styles/php.css
+++ b/js/plugins/highlight/styles/php.css
@@ -102,7 +102,7 @@ pre {
 .scheme .hljs-keyword,
 .tex .hljs-special,
 .hljs-prompt {
-    color: #990073;
+    color: #0000BB;
 }
 
 .hljs-built_in {
