--- a/js/plugins/highlight/styles/php.css
+++ b/js/plugins/highlight/styles/php.css
@@ -22,6 +22,7 @@ pre {
     display: block;
     overflow-x: auto;
     padding: 0.5em;
+    font-family: 'PragmataPro';
     color: #333;
     background: #f8f8f8;
     -webkit-text-size-adjust: none;
