--- a/js/plugins/highlight/styles/php.css
+++ b/js/plugins/highlight/styles/php.css
@@ -23,7 +23,7 @@ pre {
     overflow-x: auto;
     padding: 0.5em;
     color: #0000BB;
-    background: #fff;
+    background: #f8f8f8;
     -webkit-text-size-adjust: none;
 }
 
