--- a/js/plugins/highlight/styles/php.css
+++ b/js/plugins/highlight/styles/php.css
@@ -25,6 +25,7 @@ pre {
     color: #0000BB;
     background: url(./codebg.png) repeat scroll left top #f8f8f8;
     -webkit-text-size-adjust: none;
+    border-left:5px solid #ccc;
 }
 
 .hljs-comment,
