--- a/js/plugins/highlight/styles/php.css
+++ b/js/plugins/highlight/styles/php.css
@@ -13,8 +13,9 @@ pre {
     display: block;
     overflow-x: auto;
     padding: 0.5em;
+    font-weight: bold;
     color: #0000BB;
-    background: #fff;
+    background: #f8f8f8;
     -webkit-text-size-adjust: none;
 }
 
