--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
 body {
     margin-top: 75px;
+    background:#fcfcfc;
 }
 
 .post-content, .page-content, .main-content {
     margin-bottom: 20px;
     font-size: 16px;
     line-height: 1.6;
-    color:#222;
+    color:#333;
 }
 
 .fa-rss {
