--- a/js/plugins/highlight/styles/php.css
+++ b/js/plugins/highlight/styles/php.css
@@ -6,16 +6,14 @@ pre {
     box-shadow: 0 0 10px 0 rgba(197, 197, 197, 0.75);
     -moz-box-shadow: 0 0 10px 0 rgba(197, 197, 197, 0.75);
     -webkit-box-shadow: 0 0 10px 0 rgba(197, 197, 197, 0.75);
-    padding: 5px;
 }
 
 .hljs {
     display: block;
     overflow-x: auto;
     padding: 0.5em;
-    font-weight: bold;
     color: #0000BB;
-    background: #f8f8f8;
+    background: #eee;
     -webkit-text-size-adjust: none;
 }
 
