--- a/js/plugins/highlight/styles/obsidian.css
+++ b/js/plugins/highlight/styles/obsidian.css
@@ -7,7 +7,7 @@
   display: block;
   overflow-x: auto;
   padding: 0.5em;
-  background: #282b2e;
+  background: url(./pojoaque.jpg) repeat scroll left top #282b2e;
   -webkit-text-size-adjust: none;
 }
 
