--- a/css/style.css
+++ b/css/style.css
@@ -27,3 +27,10 @@ pre.code {
     padding:0;
     border:0;
 }
+
+::selection {
+  background: #8892BF; /* WebKit/Blink Browsers */
+}
+::-moz-selection {
+  background: #8892BF; /* Gecko Browsers */
+}
