--- a/js/plugins/highlight/styles/php.css
+++ b/js/plugins/highlight/styles/php.css
@@ -3,11 +3,7 @@ php.net style (c) Sarfraz Ahmed <sarfraznawaz2005@gmail.com>
 */
 
 pre {
-    border: 8px solid #aaa;
-    
-    -moz-box-shadow: 10px 10px 5px #AAA;
-    -webkit-box-shadow: 10px 10px 5px #AAA;
-    box-shadow: 0 0 15px #333;
+
 }
 
 .hljs {
@@ -19,6 +15,11 @@ pre {
     border: 1px solid #ccc;
     margin:5px;
     -webkit-text-size-adjust: none;
+        border: 1px solid #aaa;
+    
+    -moz-box-shadow: 10px 10px 5px #333;
+    -webkit-box-shadow: 10px 10px 5px #333;
+    box-shadow: 0 0 15px #333;
 }
 
 .hljs-comment,
